[package]
name = "multiprecision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
num-traits = "0.2.18"
hex = "0.4.3"
num-bigint = { version = "0.4.4", features = ["rand"] }
num-integer = "0.1.46"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
